# hangman

./: .gitignore  CMakeLists.txt  README.md
cmake/: clang-cxx-dev-tools.cmake
data/: dictionary.txt  test_dict.txt
design_docs/: Hangman written design.docx  Hangman written design.odt  hangman2.vpp
docs/: CS1410 Final Hangman.vpp  CS1410 Final Hangman.vpp.bak_000f  CS1410 Final Hangman.vpp.bak_001d  CS1410 Final Hangman.vpp.bak_002d  CS1410 Final Hangman.vpp.bak_003d
inc/: Computer.h  FileManager.h  GameManager.h  IPlayer.h  Player.h  WordManager.h  file_not_found_exception.h  types.h
scripts/: rebuild_project.sh
src/: CMakeLists.txt  Computer.cpp  FileManager.cpp  GameManager.cpp  Player.cpp  ScrabbleLetterValueCalculator.cpp  WordManager.cpp  main.cpp
tests/: CMakeLists.txt  file_manager_test.cpp  game_manager_tests.cpp  player_tests.cpp
